// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exports 1`] = `
{
  ".": {
    "import": "./esm/index.js",
    "require": "./commonjs/index.cjs",
    "types": "./types/index.d.ts",
  },
  "./k2": {
    "import": "./esm/index.js",
    "require": "./commonjs/index.cjs",
    "types": "./types/index.d.ts",
  },
}
`;

exports[`exports 2`] = `
"{
  ".": {
    "types": "./types/index.d.ts",
    "require": "./commonjs/index.cjs",
    "import": "./esm/index.js"
  },
  "./k2": {
    "types": "./types/index.d.ts",
    "require": "./commonjs/index.cjs",
    "import": "./esm/index.js"
  }
}"
`;
